# Python

./: README.md
basic_data_structure/: collections.Counter.py  collections_counter.py  ordered_dictionary.py
coverage/: READEME.txt
coverage/hello_world_blzmode/: MODULE.bazel
coverage/hello_world_blzmode/bazel-bin/hello_world/: binary_file_location.txt  hello_world_app
coverage/hello_world_blzmode/hello_world/: BUILD
file_operation/: file_operation.py
itertools/: chain.py  islice.py  izip.py
python_useful_knowledge/: python_any.py  python_lambda.py  python_zip.py
requests/: requests_advanced_session.py  requests_basic.py  requests_part1.py
scope/: closures.py  scope.py
selenium3/: find_element_by_xpath_for_firefox.py
third_party_libs/: python_memcached.py  python_redis.py
thread/: thread_basic_1.py  thread_class.py  thread_counter.py  thread_signal.py
